F!! AwtApprovals.verifySequenceWithTimings